--- a/Starter PubCollab.master
+++ b/Starter PubCollab.master
@@ -191,7 +191,11 @@
 								</SharePoint:AjaxDelta>						
 
 							</h1>
-						</div>					
+						</div>
+						<!-- ===== STARTER: Status bar / also used for notifications in 365 ======================================= -->
+						<SharePoint:AjaxDelta id="DeltaPageStatusBar" BlockElement="true" runat="server">
+							<div id="pageStatusBar"></div>
+						</SharePoint:AjaxDelta>
 						
 						<SharePoint:AjaxDelta ID="DeltaPlaceHolderMain" IsMainContent="true" runat="server">
 							<!-- ===== STARTER: Main Placeholder gets replaced with content of the page ======================================= -->
